- Requires uninstall: ⚠️ YES ⚠️

### Improvements
- VEX-1007: Chat messages are now animated
- VEX-1007: all chats have now preview
- VEX-1227: Showing app version in profile
- VEX-1223: Social media added to profile

### Fixes
- VEX-855: Make bitcoin data cached
- VEX-933: Fixed blank profile picture when taken by camera
- VEX-984: Fixed offer perspective
- VEX-988: Fixed blank offer locations
- VEX-1006: Fixed locked view on smaller devices
- VEX-1008: Fixed marketplace header
- VEX-1007: Fixed case when chat previews are not updating
- VEX-1111: Notifications check on app startup
- VEX-1107: Notifications at the end of onboarding
- VEX-1061: Making the loader readable for 3 seconds
- VEX-1229: Paste long urls is now possible on chat
- VEX-1220: Emojis not appearing in chat
- VEX-1219: Initial messag of the request is now available on chat

### Known Issues