@@ -5,6 +5,7 @@
 - VEX-1007: all chats have now preview
 - VEX-1227: Showing app version in profile
 - VEX-1223: Social media added to profile
+- VEX-1213: Multiple request now are obvious
 
 ### Fixes
 - VEX-855: Make bitcoin data cached
